frontend/test/should_fail/keepOneForEach_accumulation_method_type_mismatch.grg
test t
{
---
	def var i:int;
	def var j:string;
} \ keepOneForEach<i>Accumulate<j>By<sum>
